core/compiler/tests/programs/ok/generic_main.loz
flip :: (a, b) -> (b, a)
flip (a, b) = (b, a)

main = flip (1, 'c')