core/compiler/tests/programs/type_err/eq_different_types_generic.loz
f :: a b -> Bool
f a b = a == b

main = f 18 'c'